[package]
name = "cubegen"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
color-eyre = "0.6.3"
futures = "0.3.31"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
directories = "6.0.0"
toml = "0.8.23"
